# qysqa_samsa

./: .gitignore  README.md  dockerfile  main.py  requirements.txt
api/: main.py  student.py  teacher.py  types.py
back/: .env  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
back/api/: student.py  types.py
back/core/: celery.py  config.py  security.py
back/db/: database.py  models.py
back/dependencies/: auth.py
back/routes/: auth.py  courses.py  health.py
back/schemas/: auth.py  course.py
back/scripts/: process_all_courses.py
back/services/: auth.py  moodle.py  s3.py
back/tasks/: courses.py
back/utils/: auth.py  db.py  entities.py
backend/: pyproject.toml  reqs.txt
backend/core/: test.py
backend/core/generator/: conspect.py  test.py
backend/core/processing/: s3processor.py  test.py
backend/processing/: test.py
backend/rag/: .gitignore  api.py  config.py  dockerfile  models.py  processing.py  prompts.py  rag_python.py  requirements.txt  retrievers.py  utils.py
backend/rag/vector_store/: chroma.sqlite3
front/: package-lock.json  package.json
front/src/.next/cache/: .rscinfo
front/src/.next/server/: server-reference-manifest.js  server-reference-manifest.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/auth/: page.tsx
front/src/features/auth/: page.tsx
front/src/features/courses/: page.tsx
scrapers/: package-lock.json  package.json  scrapeAuth.js  scrapeCourses.js  scrapeLessonFilesById.js
utils/: auth.py  db.py  entities.py  moodle.py  s3.py  tests.py
(+42 files in other folders)
