[project]
name = "qysqa-samsa"
version = "0.1.0"
description = ""
authors = [
    {name = "Ansar",email = "nansarik@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.11)",
    "aiosqlite (==0.20.0)",
    "sqlalchemy (==2.0.39)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.2.1)",
    "python-dotenv (==1.0.1)",
    "faker (==30.3.0)",
    "bcrypt (==4.0.1)",
    "uvicorn (==0.34.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "boto3 (>=1.38.8,<2.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "redis (>=5.0.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
